==============================================================
1.0.2 [2025/03/02]
==============================================================
 - moved to personal favorites (goffy)

==============================================================
1.0.1 [2024/08/23]
==============================================================
 - added block for directory list (goffy)
 - fixed bugs (JJDai54/goffy)
 - added german lang files (goffy)
 - added big cards (goffy)
 - updated templates (goffy)
 - updated search (goffy)
 - added file sorting (goffy)
 - added favorites (goffy)
 - fixed bug with file name with special chars (goffy)
 - added collapsable link block (goffy)

==============================================================
1.0 [2024/06/29 13:11:46]
==============================================================
 - Original release wgfilemanager (Goffy - Wedega)