@@ -2,6 +2,7 @@
 1.0.2 [2025/03/02]
 ==============================================================
  - moved to personal favorites (goffy)
+ - added alert for file names with multiple dots (goffy)
 
 ==============================================================
 1.0.1 [2024/08/23]
